# Loopy

./: .env.example  README.md  pyproject.toml
.claude/: launch.json
app/: .gitignore  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js
app/scripts/: build-python-backend.js  prepare-python-backend.js
ninexf/: __init__.py  __main__.py  apppage.py  apppage_cool.py  appsettings.py  arena.py  backends.py  cli.py  config.py  context.py  contract.py  dashboard.py  filecache.py  gitops.py  interactive.py  log.py  loop.py  loop_common.py  loop_decompose.py  loop_execution.py  loop_lifecycle.py  loop_planning.py  loop_recovery.py  loop_reflection.py  loop_verify.py  looplog.py  models.py  parser.py  prompts.py  quality.py  registry.py  relevance.py  report.py  sandbox.py  stuck.py  tasks.py  tools.py  validate.py  webapp.py
ninexf/bench/: __init__.py  report.py  runner.py  spec.py
ninexf/bench/experiments/: ablation.json  local-quick.json  smoke.json  thesis.json
ninexf/bench/tasks/anagram_groups/: goal.txt  meta.json
ninexf/bench/tasks/calculator/: goal.txt  meta.json
ninexf/bench/tasks/fizzbuzz/: goal.txt  meta.json
ninexf/bench/tasks/flatten/: goal.txt  meta.json
ninexf/bench/tasks/greeting/: goal.txt  meta.json
ninexf/bench/tasks/linked_list/: goal.txt  meta.json
ninexf/bench/tasks/lru_cache/: goal.txt  meta.json
ninexf/bench/tasks/palindrome/: goal.txt  meta.json
tests/: helpers.py  test_bench.py  test_bench_oracles.py  test_filecache.py  test_loop_scenarios.py  test_units.py  test_webapp.py
(+20 files in other folders)
