[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ninexf-loops"
version = "0.6.0"
description = "9xf loops: a research harness for autonomous, self-prompting coding loops"
requires-python = ">=3.10"

[project.scripts]
"9xf" = "ninexf.cli:main"

[tool.setuptools.packages.find]
include = ["ninexf*"]
